--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -22,10 +22,6 @@ a {color: #222; text-decoration: none;}
     box-sizing: border-box;
     font-family: "GmarketSans";
     color: #fff;
-    
-    // .bgOff {
-    //     transition: background 0.25s ease, padding 0.7s ease;
-    // }
 
     .logo {
         position:absolute;
@@ -110,6 +106,65 @@ a {color: #222; text-decoration: none;}
     }
 }
 
+.slides {
+    position: relative;
+
+    .arrow {
+        width: 50px;
+        height: 50px;
+        top: 50%;
+        margin-top: -25px;
+        border-radius: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        color: #222;
+        background: #fff;
+        text-align: center;
+        cursor: pointer;
+        box-shadow: 0 1px 4px rgba(0,0,0,0.19);
+        opacity: 0;
+        transition: transform 0.95s ease, opacity 0.25s ease, color 0.25s ease, background 0.25s ease;
+
+        svg {
+            width: 23px;
+            height: 23px;
+        }
+
+        &.next {
+            right: 0;
+        }
+
+        &.prev {
+            left: 0;
+        }
+        
+        &:not(.disable){
+            &:hover {
+                background: #222;
+                color: #fff;
+            }
+        }
+    }
+
+    &:hover .arrow {
+        opacity: 1;
+
+        &.prev {
+            transform: translate(30px, 0);
+        }
+
+        &.next {
+            transform: translate(-30px, 0);
+        }
+
+        &.disable {
+            opacity: .35;
+        }
+    }
+}
+
 #fullpage {
     // .bannerWrap {
     //     position: absolute;
@@ -152,7 +207,6 @@ a {color: #222; text-decoration: none;}
 
             .left {
                 .products {
-                    position: relative;
                     padding: 0 11% 20px;
                     margin: 0 20%;
                     max-width: 350px;
@@ -174,61 +228,6 @@ a {color: #222; text-decoration: none;}
                         &:hover .description {
                             opacity: 1;
                             visibility: visible;
-                        }
-                    }
-        
-                    .arrow {
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        position: absolute;
-                        width: 50px;
-                        height: 50px;
-                        top: 50%;
-                        margin-top: -25px;
-                        border-radius: 50px;
-                        transition: transform 0.95s ease, opacity 0.25s ease, color 0.25s ease, background 0.25s ease;
-                        box-shadow: 0 1px 4px rgba(0,0,0,0.19);
-                        opacity: 0;
-                        color: #222;
-                        background: #fff;
-                        text-align: center;
-                        cursor: pointer;
-        
-                        svg {
-                            width: 23px;
-                            height: 23px;
-                        }
-        
-                        &.next {
-                            right: 0;
-                        }
-        
-                        &.prev {
-                            left: 0;
-                        }
-                        
-                        &:not(.disable){
-                            &:hover {
-                                background: #222;
-                                color: #fff;
-                            }
-                        }
-                    }
-    
-                    &:hover .arrow {
-                        opacity: 1;
-    
-                        &.prev {
-                            transform: translate(30px, 0);
-                        }
-    
-                        &.next {
-                            transform: translate(-30px, 0);
-                        }
-    
-                        &.disable {
-                            opacity: .35;
                         }
                     }
     
@@ -401,6 +400,20 @@ a {color: #222; text-decoration: none;}
                         font-weight: 300;
                         line-height: 1.8;
                         font-family: GmarketSans;
+                    }
+                }
+
+                .right {
+                    .box {
+                        padding: 0 7%;
+                        margin: 0 8%;
+
+                        h3 {
+                            font-size: 31px;
+                            font-weight: 300;
+                            padding-bottom: 10px;
+                            font-family: GmarketSans;
+                        }
                     }
                 }
             }
