--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -3,6 +3,7 @@
 @import url(//fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Outfit&display=swap);
 @import url(//webfontworld.github.io/gmarket/GmarketSans.css);
 body {
+  background: #fff;
   font: 0.8em "Outfit", "Noto Sans KR", "맑은 고딕", "Malgun Gothic", Verdana, Dotum, AppleGothic, sans-serif;
 }
 
@@ -161,6 +162,61 @@ a {
 .slides:hover .arrow.disable {
   opacity: 0.35;
 }
+.slides .product {
+  position: relative;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+.slides .product img {
+  width: 100%;
+  border-radius: 16px;
+}
+.slides .description {
+  display: flex;
+  flex-direction: column;
+}
+.slides .reviewCount {
+  border: 1px solid #e7e7e7;
+  padding: 6px 9px;
+  font-size: 13px;
+  font-weight: 400;
+  border-radius: 6px;
+}
+.slides .likes {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: 1px solid #e8e8e8;
+  border-radius: 25px;
+  background: #fff;
+  padding: 8px 12px;
+  font-size: 13px;
+}
+.slides .likes .count {
+  padding-left: 3px;
+  color: #999;
+}
+.slides .icons {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+}
+.slides .icons svg {
+  width: 20px;
+  height: 20px;
+  color: #999;
+  border: 1px solid #e8e8e8;
+  padding: 5px;
+}
+.slides .custom-dot span {
+  display: inline-block;
+  padding: 5px 12px;
+  border: 1px solid #ddd;
+  border-radius: 30px;
+  font-size: 15px;
+  color: #999;
+  font-weight: 400;
+}
 
 #fullpage .section.second.active .content .left .products {
   transform: translate(0, 0);
@@ -180,13 +236,7 @@ a {
   transition-delay: 0.7s;
 }
 #fullpage .section.second .left .products .product {
-  position: relative;
   margin: 22px 0 10px;
-  cursor: pointer;
-}
-#fullpage .section.second .left .products .product img {
-  width: 100%;
-  border-radius: 16px;
 }
 #fullpage .section.second .left .products .product:hover .description {
   opacity: 1;
@@ -194,8 +244,6 @@ a {
 }
 #fullpage .section.second .left .products .description {
   position: absolute;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100%;
@@ -207,18 +255,10 @@ a {
   visibility: hidden;
   transition: opacity 0.25s ease, visibility 0.25s ease;
 }
-#fullpage .section.second .left .products .description .reviewCount {
-  border: 1px solid #e7e7e7;
-  padding: 6px 9px;
-  font-size: 13px;
-  font-weight: 400;
-  border-radius: 6px;
-}
 #fullpage .section.second .left .products .description .name {
   font-size: 19px;
   font-weight: bold;
   text-align: center;
-  font-weight: bold;
   padding-top: 12px;
 }
 #fullpage .section.second .left .products .description .brand {
@@ -231,39 +271,7 @@ a {
   font-size: 19px;
   padding-top: 8px;
 }
-#fullpage .section.second .left .products .description .likes {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  border: 1px solid #e8e8e8;
-  border-radius: 25px;
-  background: #fff;
-  padding: 8px 12px;
-  font-size: 13px;
-}
-#fullpage .section.second .left .products .description .likes .count {
-  padding-left: 3px;
-  color: #999;
-}
-#fullpage .section.second .left .products .description .icons {
-  position: absolute;
-  right: 10px;
-  bottom: 10px;
-}
-#fullpage .section.second .left .products .description .icons svg {
-  width: 20px;
-  height: 20px;
-  color: #999;
-  border: 1px solid #e8e8e8;
-  padding: 5px;
-}
 #fullpage .section.second .left .products .custom-dot span {
-  padding: 5px 12px;
-  border: 1px solid #ddd;
-  border-radius: 30px;
-  font-size: 15px;
-  color: #999;
-  font-weight: 400;
   transition: color 0.25s ease;
 }
 #fullpage .section.second .right span {
@@ -338,6 +346,228 @@ a {
   font-weight: 300;
   line-height: 1.8;
   font-family: GmarketSans;
+}
+#fullpage .section.third .content .right .box {
+  padding: 0 7%;
+  margin: 0 8%;
+}
+#fullpage .section.third .content .right .box h3 {
+  font-size: 31px;
+  font-weight: 300;
+  padding-bottom: 10px;
+  font-family: GmarketSans;
+}
+#fullpage .section.third .content .right .box .slides .slick-slider .slick-track {
+  margin-left: -17px;
+}
+#fullpage .section.third .content .right .box .slides .product {
+  padding: 22px 17px 0 17px;
+}
+#fullpage .section.third .content .right .box .slides .product:hover .img .likes, #fullpage .section.third .content .right .box .slides .product:hover .img .icons {
+  opacity: 1;
+}
+#fullpage .section.third .content .right .box .slides .product .img {
+  position: relative;
+}
+#fullpage .section.third .content .right .box .slides .product .img .likes, #fullpage .section.third .content .right .box .slides .product .img .icons {
+  transition: opacity 0.5s ease;
+  opacity: 0;
+}
+#fullpage .section.third .content .right .box .slides .product .timeSale {
+  background: #fcfcfc;
+  padding: 15px;
+  margin-top: 15px;
+  border: 1px solid #eee;
+  border-radius: 10px;
+  font-size: 16px;
+  color: #777;
+  text-align: cetner;
+  line-height: 1.6em;
+}
+#fullpage .section.third .content .right .box .slides .product .description {
+  position: relative;
+  margin-top: 15px;
+  padding-right: 64px;
+}
+#fullpage .section.third .content .right .box .slides .product .description .reviewCount {
+  position: absolute;
+  right: 0;
+  top: 2px;
+}
+#fullpage .section.third .content .right .box .slides .product .description .name {
+  font-size: 19px;
+  color: #222;
+  font-weight: 600;
+}
+#fullpage .section.third .content .right .box .slides .product .description .price {
+  padding-top: 10px;
+  font-size: 19px;
+  font-weight: 700;
+  color: #222;
+}
+#fullpage .section.third .content .right .box .slides .product .description .price.line {
+  color: #999;
+  text-decoration: line-through;
+}
+#fullpage .section.third .content .right .box .slides .product .description .discountPrice {
+  font-size: 19px;
+  color: #222;
+  font-weight: 700;
+}
+#fullpage .section.third .content .right .box .slides .product .description .discountPrice span {
+  padding-left: 4px;
+  font-weight: 400;
+}
+#fullpage .section.third .content .right .box .slides .custom-dot {
+  margin-top: 20px;
+}
+#fullpage .section.seventh {
+  background: rgb(245, 245, 245);
+}
+#fullpage .section.seventh .box {
+  position: relative;
+  display: flex;
+  padding: 0 15% 0 45%;
+}
+#fullpage .section.seventh .box h2 {
+  position: absolute;
+  top: 50%;
+  left: 12%;
+  font-size: 63px;
+  font-weight: 700;
+  color: #000;
+  font-family: "GmarketSans";
+  transform: translate(0, -50%);
+}
+#fullpage .section.seventh .box h2 span {
+  display: block;
+  padding-top: 10px;
+  font-size: 28px;
+  color: #222;
+  font-weight: 300;
+}
+#fullpage .section.seventh .box .feed {
+  max-width: 1000px;
+  overflow: hidden;
+}
+#fullpage .section.eighth {
+  background: url("../images/mainBg08.jpg") center center/cover no-repeat;
+}
+#fullpage .section.eighth.active .box {
+  transform: translate(0, 0);
+  opacity: 1;
+}
+#fullpage .section.eighth .box {
+  display: flex;
+  flex-direction: column;
+  padding: 0 150px 30px 150px;
+  color: #fff;
+  font-family: GmarketSans;
+  transform: translate(0, -70px);
+  opacity: 0;
+  transition: transform 1.5s ease, opacity 1.5s ease;
+}
+#fullpage .section.eighth .box h2 {
+  font-size: 90px;
+  line-height: 1.2;
+  font-weight: 700;
+}
+#fullpage .section.eighth .box p {
+  font-size: 30px;
+  line-height: 1.68;
+  font-weight: 300;
+  margin-top: 20px;
+}
+#fullpage .section.eighth .box span {
+  font-size: 19px;
+  font-weight: 300;
+  line-height: 1.5;
+  margin-top: 8px;
+}
+#fullpage .section.eighth .box .more {
+  margin-top: 34px;
+  padding: 23px 25px;
+  max-width: 135px;
+  font-size: 15px;
+  line-height: 1.5;
+  color: #666;
+  background: #fff;
+  border-radius: 50px;
+  text-align: center;
+  font-weight: 400;
+  box-sizing: border-box;
+}
+#fullpage .section.footer {
+  height: auto;
+  padding-bottom: 90px;
+}
+#fullpage .section.footer .box {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 30px 85px 0 85px;
+}
+#fullpage .section.footer .box .cs {
+  padding-bottom: 50px;
+}
+#fullpage .section.footer .box .cs h3 {
+  font-size: 21px;
+  font-weight: 600;
+  padding-bottom: 5px;
+}
+#fullpage .section.footer .box .cs .call {
+  font-size: 38px;
+  font-weight: 600;
+  padding: 3px 0 7px 0;
+}
+#fullpage .section.footer .box .cs .call span {
+  font-size: 17px;
+  color: #999;
+  padding-left: 10px;
+}
+#fullpage .section.footer .box .cs .account {
+  font-size: 17px;
+}
+#fullpage .section.footer .box .utilMenu li {
+  color: #222;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.5;
+  padding: 3px 0;
+}
+#fullpage .section.footer .box .copyright {
+  font-size: 16px;
+  color: #222;
+  line-height: 1.8;
+}
+#fullpage .section.footer .box .sns {
+  display: flex;
+  flex-direction: row-reverse;
+  padding-bottom: 100px;
+}
+#fullpage .section.footer .box .sns li {
+  padding-left: 40px;
+  font-size: 45px;
+  color: #222;
+  cursor: pointer;
+}
+#fullpage .section.footer .box .sns li.facebook svg:hover {
+  color: #3b5998;
+}
+#fullpage .section.footer .box .sns li.instagram svg:hover {
+  color: #3897f0;
+}
+#fullpage .section.footer .box .sns li.youtube svg:hover {
+  color: #ff0000;
+}
+#fullpage .section.footer .box .address {
+  text-align: right;
+  font-size: 16px;
+  color: #222;
+  line-height: 1.8;
+}
+#fullpage .section.footer .box .address span {
+  padding-left: 8px;
 }
 #fullpage .section .content {
   display: flex;
