--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -443,6 +443,84 @@ a {
 #fullpage .section.third .content .right .box .slides .custom-dot {
   margin-top: 20px;
 }
+#fullpage .section.fourth {
+  box-sizing: border-box;
+}
+#fullpage .section.fourth .box {
+  position: relative;
+  margin: 0 6% 20px 28%;
+}
+#fullpage .section.fourth .box h2 {
+  position: absolute;
+  top: 20px;
+  left: -28%;
+  font-size: 64px;
+  font-weight: 700;
+  color: #000;
+  font-family: "GmarketSans";
+}
+#fullpage .section.fourth .box .products {
+  display: flex;
+  padding: 0 100px;
+}
+#fullpage .section.fourth .box .products .product {
+  margin-right: 35px;
+}
+#fullpage .section.fourth .box .products .product .description {
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 10px 20px;
+  background: rgba(255, 255, 255, 0.93);
+  box-sizing: border-box;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.25s ease, visibility 0.25s ease;
+}
+#fullpage .section.fourth .box .products .product .description .name {
+  font-size: 19px;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 12px;
+}
+#fullpage .section.fourth .box .products .product .description .brand {
+  font-size: 19px;
+  font-weight: 400;
+  padding-top: 10px;
+}
+#fullpage .section.fourth .box .products .product .description .price {
+  font-weight: bold;
+  font-size: 19px;
+  padding-top: 8px;
+}
+#fullpage .section.fourth .box .products .product:hover .description {
+  opacity: 1;
+  visibility: visible;
+}
+#fullpage .section.fourth .box .viewAll {
+  padding: 10px 135px 0 0;
+  text-align: right;
+}
+#fullpage .section.fourth .box .viewAll span {
+  display: inline-block;
+  padding: 17px 20px;
+  border-radius: 30px;
+  font-size: 14px;
+  font-weight: 400;
+  text-align: center;
+  color: #222;
+  line-height: 1.5;
+  border: 1px solid #222;
+  background-color: transparent;
+  transition: background 0.25s ease;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+#fullpage .section.fourth .box .viewAll:hover span {
+  background-color: #eee;
+}
 #fullpage .section.seventh {
   background: rgb(245, 245, 245);
 }
@@ -597,6 +675,10 @@ a {
 }
 #fullpage .section .content > div {
   width: 50%;
+}
+
+#fp-nav.fp-right {
+  right: 75px !important;
 }
 
 #fp-nav ul li a span {
