--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -541,6 +541,98 @@ a {color: #222; text-decoration: none;}
             }
         }
 
+        &.fourth {
+            box-sizing: border-box;
+
+            .box {
+                position: relative;
+                margin: 0 6% 20px 28%;
+
+                h2 {
+                    position: absolute;
+                    top: 20px;
+                    left: -28%;
+                    font-size: 64px;
+                    font-weight: 700;
+                    color: #000;
+                    font-family: "GmarketSans";
+                }
+
+                .products {
+                    display: flex;
+                    padding: 0 100px;
+    
+                    .product {
+                        margin-right: 35px;
+
+                        .description {
+                            position:absolute;
+                            align-items: center;
+                            justify-content: center;
+                            width: 100%;
+                            height: 100%;
+                            padding: 10px 20px;
+
+                            background: rgba(255, 255, 255, 0.93);
+                            box-sizing: border-box;
+                            opacity: 0;
+                            visibility: hidden;
+                            transition: opacity 0.25s ease, visibility 0.25s ease;
+    
+                            .name {
+                                font-size:19px;
+                                font-weight:bold;
+                                text-align:center;
+                                padding-top: 12px;
+                            }
+                    
+                            .brand {
+                                font-size: 19px;
+                                font-weight: 400;
+                                padding-top: 10px;
+                            }
+                    
+                            .price {
+                                font-weight: bold;
+                                font-size: 19px;
+                                padding-top: 8px;
+                            }
+                        }
+    
+                        &:hover .description {
+                            opacity: 1;
+                            visibility: visible;
+                        }
+                    }
+                }
+
+                .viewAll {
+                    padding: 10px 135px 0 0;
+                    text-align: right;
+
+                    span {
+                        display: inline-block;
+                        padding: 17px 20px;
+                        border-radius: 30px;
+                        font-size: 14px;
+                        font-weight: 400;
+                        text-align: center;
+                        color: #222;
+                        line-height: 1.5;
+                        border: 1px solid #222;
+                        background-color: transparent;
+                        transition: background 0.25s ease;
+                        box-sizing: border-box;
+                        cursor: pointer;
+                    }
+
+                    &:hover span {
+                        background-color: #eee;
+                    }
+                }
+            }
+        }
+
         &.seventh {
             background: rgb(245, 245, 245);
 
@@ -728,6 +820,10 @@ a {color: #222; text-decoration: none;}
             }
         }   
     }
+}
+
+#fp-nav.fp-right {
+    right: 75px!important;
 }
 
 #fp-nav ul li a span {
