--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -522,7 +522,8 @@ a {
   background-color: #eee;
 }
 #fullpage .section.fifth .box {
-  padding: 0 16%;
+  padding: 0 6%;
+  margin: 0 10%;
 }
 #fullpage .section.fifth h2 {
   text-align: center;
@@ -532,8 +533,18 @@ a {
   color: #000;
   font-family: "GmarketSans";
 }
+#fullpage .section.fifth .arrow.prev {
+  left: -95px;
+}
+#fullpage .section.fifth .arrow.next {
+  right: -95px;
+}
+#fullpage .section.fifth .slick-list {
+  padding-top: 7px;
+}
 #fullpage .section.fifth .product {
   padding-right: 15px;
+  transition: transform 0.25s ease;
 }
 #fullpage .section.fifth .product .wrap {
   border: 1px solid #e7e7e7;
@@ -573,6 +584,49 @@ a {
 #fullpage .section.fifth .product .wrap .info .starts {
   display: inline-block;
   padding-top: 15px;
+}
+#fullpage .section.fifth .product:hover {
+  transform: translate(0, -7px);
+}
+#fullpage .section.fifth .custom-slick-dots {
+  display: flex !important;
+  justify-content: center;
+  margin-top: 35px;
+}
+#fullpage .section.fifth .custom-slick-dots li {
+  width: 12px;
+  height: 12px;
+  border-radius: 30px;
+  margin: 0 3px;
+  border: 3px solid #555;
+  text-indent: -999px;
+  transition: color 0.25s ease, width 0.25s ease;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+#fullpage .section.fifth .custom-slick-dots li.slick-active {
+  width: 28px;
+  border-color: #222;
+}
+#fullpage .section.fifth .viewAll {
+  margin-top: 45px;
+  text-align: center;
+}
+#fullpage .section.fifth .viewAll span {
+  display: inline-block;
+  padding: 17px 20px;
+  border-radius: 30px;
+  font-size: 14px;
+  color: #fff;
+  line-height: 1.5;
+  background-color: #222;
+  transition: background 0.25s ease;
+  font-weight: 400;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+#fullpage .section.fifth .viewAll span:hover {
+  background-color: #555;
 }
 #fullpage .section.seventh {
   background: rgb(245, 245, 245);
