--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -635,7 +635,8 @@ a {color: #222; text-decoration: none;}
 
         &.fifth {
             .box {
-                padding: 0 16%;
+                padding: 0 6%;
+                margin: 0 10%;
             }
 
             h2 {
@@ -647,8 +648,22 @@ a {color: #222; text-decoration: none;}
                 font-family: "GmarketSans";
             }
 
+            .arrow {
+                &.prev {
+                    left: -95px;
+                }
+                &.next {
+                    right: -95px;
+                }
+            }
+
+            .slick-list {
+                padding-top: 7px;
+            }
+            
             .product {
                 padding-right: 15px;
+                transition: transform 0.25s ease;
 
                 .wrap {
                     border: 1px solid #e7e7e7;
@@ -692,6 +707,56 @@ a {color: #222; text-decoration: none;}
                             display: inline-block;
                             padding-top: 15px;
                         }
+                    }
+                }
+
+                &:hover {
+                    transform: translate(0, -7px);
+                }
+            }
+
+            .custom-slick-dots {
+                display: flex!important;
+                justify-content: center;
+                margin-top: 35px;
+
+                li {
+                    width: 12px;
+                    height: 12px;
+                    border-radius: 30px;
+                    margin: 0 3px;
+                    border: 3px solid #555;
+                    text-indent: -999px;
+                    transition: color 0.25s ease,width 0.25s ease;
+                    cursor:pointer;
+                    box-sizing: border-box;
+
+                    &.slick-active {
+                        width: 28px;
+                        border-color: #222;
+                    }
+                }
+            }
+
+            .viewAll {
+                margin-top: 45px;
+                text-align:center;
+
+                span {
+                    display: inline-block;
+                    padding: 17px 20px;
+                    border-radius: 30px;
+                    font-size: 14px;
+                    color: #fff;
+                    line-height: 1.5;
+                    background-color:#222;
+                    transition: background 0.25s ease;
+                    font-weight: 400;
+                    box-sizing: border-box;
+                    cursor: pointer;
+
+                    &:hover {
+                        background-color: #555;
                     }
                 }
             }
