--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -434,6 +434,13 @@ a {color: #222; text-decoration: none;}
         &.third {
             height: 100%;
 
+            &.active {
+                .content .left .box {
+                    transform: translate(0, 0);
+                    opacity: 1;
+                }
+            }
+
             .fp-overflow {
                 height: 100%;
             }
@@ -449,32 +456,38 @@ a {color: #222; text-decoration: none;}
                     background: url("../images/mainBg03.jpg") center center/cover no-repeat;
                     padding: 0 100px 40px;
                     box-sizing: border-box;
-
-                    span {
-                        display:inline-block;
-                        padding-bottom: 48px;
-                        color: #fff;
-                        font-size: 23px;
-                        font-weight: 300;
-                        line-height: 1.5;
-                        font-family: GmarketSans;
-                    }
-
-                    h2 {
-                        color: #fff;
-                        font-size: 72px;
-                        font-weight: 700;
-                        line-height: 1.3;
-                        font-family: GmarketSans;
-                    }
                     
-                    p {
-                        padding-top: 35px;
-                        color: #fff;
-                        font-size: 24px;
-                        font-weight: 300;
-                        line-height: 1.8;
-                        font-family: GmarketSans;
+                    .box {
+                        opacity: 0;
+                        transform: translate(70px, 0);
+                        transition: transform 1.5s ease,opacity 1.5s ease;
+
+                        span {
+                            display:inline-block;
+                            padding-bottom: 48px;
+                            color: #fff;
+                            font-size: 23px;
+                            font-weight: 300;
+                            line-height: 1.5;
+                            font-family: GmarketSans;
+                        }
+    
+                        h2 {
+                            color: #fff;
+                            font-size: 72px;
+                            font-weight: 700;
+                            line-height: 1.3;
+                            font-family: GmarketSans;
+                        }
+                        
+                        p {
+                            padding-top: 35px;
+                            color: #fff;
+                            font-size: 24px;
+                            font-weight: 300;
+                            line-height: 1.8;
+                            font-family: GmarketSans;
+                        }
                     }
                 }
 
