--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -30,6 +30,208 @@ a {
   text-decoration: none;
 }
 
+fieldset, input {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+#search {
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.97);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.7s ease;
+  transform: translate(0, -15px) translateZ(0) scale(1, 1);
+  z-index: 1;
+}
+#search.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translate(0, 0) translateZ(0) scale(1, 1);
+}
+#search .close {
+  position: absolute;
+  z-index: 1;
+  top: 40px;
+  right: 40px;
+  width: 62px;
+  height: 62px;
+  font-size: 62px;
+  color: #222;
+  padding: 10px;
+  transform-origin: center center;
+  transition: transform 0.5s ease, opacity 0.5s ease;
+  cursor: pointer;
+}
+#search .close:hover {
+  transform: rotate(90deg);
+}
+#search .left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+}
+#search .left strong {
+  padding-bottom: 25px;
+  color: #222;
+  font-size: 43px;
+  font-weight: 600;
+}
+#search .right {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+}
+#search .right:after {
+  content: "";
+  display: block;
+  clear: both;
+  width: 1px;
+  position: absolute;
+  top: 200px;
+  bottom: 200px;
+  left: 0;
+  background: #e3e3e3;
+}
+#search .right .box {
+  display: flex;
+  flex-direction: column;
+}
+#search .right .box fieldset {
+  border-bottom: 2px solid #ddd;
+}
+#search .right .box fieldset input {
+  width: 450px;
+  height: 110px;
+  line-height: 110px;
+  font-size: 59px;
+  color: #222;
+  font-weight: 700;
+  outline: none;
+}
+#search .right .box fieldset input::-moz-placeholder {
+  color: #222;
+}
+#search .right .box fieldset input::placeholder {
+  color: #222;
+}
+#search .right .box fieldset span {
+  font-size: 60px;
+  color: #222;
+  cursor: pointer;
+}
+#search .right .box .txt {
+  padding: 20px 0 35px 0;
+  color: #777;
+  font-size: 20px;
+  font-weight: 300;
+  text-align: left;
+}
+
+#menu {
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.97);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.7s ease;
+  transform: translate(0, -15px) translateZ(0) scale(1, 1);
+  z-index: 1;
+}
+#menu.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translate(0, 0) translateZ(0) scale(1, 1);
+}
+#menu.active .right {
+  right: 0;
+}
+#menu .close {
+  position: fixed;
+  top: 40px;
+  right: 370px;
+  width: 62px;
+  height: 62px;
+  font-size: 62px;
+  color: #222;
+  padding: 10px;
+  transform-origin: center center;
+  transition: transform 0.5s ease, opacity 0.5s ease;
+  cursor: pointer;
+  z-index: 1;
+}
+#menu .close:hover {
+  transform: rotate(90deg);
+}
+#menu .right {
+  position: absolute;
+  width: 330px;
+  height: 100%;
+  top: 0;
+  right: -330px;
+  padding: 0 70px;
+  background: #fff;
+  border-left: 1px solid #f6f6f6;
+  transition: all 0.5s ease;
+  box-sizing: border-box;
+}
+#menu .right .joinBenefit {
+  position: absolute;
+  left: 50%;
+  top: 47px;
+  transform: translate(-50%, 0);
+  animation: coupon 2s infinite ease-in-out;
+}
+#menu .right .joinBenefit span {
+  display: inline-block;
+  background: #eee;
+  padding: 10px 13px;
+  border-radius: 30px;
+  height: 18px;
+  line-height: 18px;
+  font-size: 12px;
+  color: #888;
+  font-weight: 400;
+}
+#menu .right .joinBenefit:after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  bottom: -5px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 7px solid #eee;
+}
+#menu .right .menuList ul {
+  padding-top: 50px;
+}
+#menu .right .menuList ul:first-child {
+  padding-top: 100px;
+}
+#menu .right .menuList ul li {
+  height: 47px;
+  line-height: 47px;
+  color: #000;
+  font-size: 20px;
+  font-weight: 300;
+  text-align: center;
+  font-family: "GmarketSans";
+  cursor: pointer;
+}
+
 #header {
   display: flex;
   align-items: center;
@@ -93,12 +295,16 @@ a {
   border: 1px solid #f3f3f3;
   border-radius: 6px;
   padding: 12px 0;
+  background: #fff;
 }
 #header .menu li .subMenu dt {
   padding: 10px 27px;
   font-size: 15px;
   transition: all 0.25s ease;
   cursor: pointer;
+  color: #222;
+  font-weight: 400;
+  line-height: 1.5;
 }
 #header .menu li .subMenu dt:hover {
   color: #999;
@@ -990,4 +1196,16 @@ a {
   height: 12px !important;
   margin: -6px 0 0 -6px !important;
   background: #000 !important;
+}
+
+@keyframes coupon {
+  0% {
+    top: 47px;
+  }
+  50% {
+    top: 52px;
+  }
+  100% {
+    top: 47px;
+  }
 }
