--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -8,6 +8,226 @@ ul, li, dl, dt {list-style: none;margin: 0;padding: 0;}
 p {margin: 0}
 strong {font-weight:normal}
 a {color: #222; text-decoration: none;}
+fieldset, input {margin: 0; padding: 0; border: none;}
+
+#search {
+    position: fixed;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background: rgba(255,255,255,0.97);
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.70s ease;
+    transform: translate(0,-15px) translateZ(0) scale(1.0,1.0);
+    z-index: 1;
+
+    &.active {
+        opacity: 1;
+        visibility: visible;
+        transform: translate(0,0) translateZ(0) scale(1.0,1.0);
+    }
+    
+    .close {
+        position: absolute;
+        z-index: 1;
+        top:40px;
+        right: 40px;
+        width: 62px;
+        height: 62px;
+        font-size: 62px;
+        color: #222;
+        padding: 10px;
+        transform-origin: center center;
+        transition: transform 0.50s ease,opacity 0.50s ease;
+        cursor: pointer;
+
+        &:hover {
+            transform: rotate(90deg);
+        }
+    }
+
+    .left {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 50%;
+
+        strong {
+            padding-bottom: 25px;
+            color: #222;
+            font-size: 43px;
+            font-weight: 600;
+        }
+    }
+
+    .right {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 50%;
+
+        &:after {
+            content: "";
+            display: block;
+            clear: both;
+            width: 1px;
+            position: absolute;
+            top: 200px;
+            bottom: 200px;
+            left: 0;
+            background: #e3e3e3;
+        }
+
+        .box {
+            display: flex;
+            flex-direction: column;
+
+            fieldset {
+                border-bottom: 2px solid #ddd;
+    
+                input {
+                    width: 450px;
+                    height: 110px;
+                    line-height: 110px;
+                    font-size: 59px;
+                    color: #222;
+                    font-weight: 700;
+                    outline: none;
+
+                    &::placeholder {
+                        color: #222;
+                    }
+                }
+    
+                span {
+                    font-size: 60px;
+                    color: #222;
+                    cursor: pointer;
+                }
+            }
+    
+            .txt {
+                padding: 20px 0 35px 0;
+                color: #777;
+                font-size: 20px;
+                font-weight: 300;
+                text-align: left;
+            }
+        }
+    }
+}
+
+#menu {
+    position: fixed;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background: rgba(255,255,255,0.97);
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.70s ease;
+    transform: translate(0,-15px) translateZ(0) scale(1.0,1.0);
+    z-index: 1;
+
+    &.active {
+        opacity: 1;
+        visibility: visible;
+        transform: translate(0,0) translateZ(0) scale(1.0,1.0);
+
+        .right {
+            right: 0;
+        }
+    }
+
+    .close {
+        position: fixed;
+        top:40px;
+        right: 370px;
+        width: 62px;
+        height: 62px;
+        font-size: 62px;
+        color: #222;
+        padding: 10px;
+        transform-origin: center center;
+        transition: transform 0.50s ease,opacity 0.50s ease;
+        cursor: pointer;
+        z-index: 1;
+
+        &:hover {
+            transform: rotate(90deg);
+        }
+    }
+
+    .right {
+        position: absolute;
+        width: 330px;
+        height: 100%;
+        top: 0;
+        right: -330px;
+        padding: 0 70px;
+        background: #fff;
+        border-left: 1px solid #f6f6f6;
+        transition: all 0.5s ease;
+        box-sizing: border-box;
+
+        .joinBenefit {
+            position: absolute;
+            left: 50%;
+            top: 47px;
+            transform: translate(-50%, 0);
+            animation: coupon 2s infinite ease-in-out;
+
+            span {
+                display: inline-block;
+                background: #eee;
+                padding: 10px 13px;
+                border-radius: 30px;
+                height: 18px;
+                line-height: 18px;
+                font-size: 12px;
+                color: #888;
+                font-weight: 400;
+            }
+
+            &:after {
+                content: '';
+                display: inline-block;
+                position: absolute;
+                bottom: -5px;
+                left: 50%;
+                transform: translate(-50%,0);
+                width: 0;
+                height: 0;
+                border-left: 6px solid transparent;
+                border-right: 6px solid transparent;
+                border-top: 7px solid #eee;
+             }
+        }
+        
+        .menuList {
+            ul {
+                padding-top: 50px;
+
+                &:first-child {
+                    padding-top: 100px;
+                }
+
+                li {
+                    height: 47px;
+                    line-height: 47px;
+                    color: #000;
+                    font-size: 20px;
+                    font-weight: 300;
+                    text-align: center;
+                    font-family: "GmarketSans";
+                    cursor: pointer;
+                }
+            }
+        }
+    }
+}
 
 #header {
     display: flex;
@@ -77,12 +297,16 @@ a {color: #222; text-decoration: none;}
                 border: 1px solid #f3f3f3;
                 border-radius: 6px;
                 padding: 12px 0;
+                background: #fff;
 
                 dt {
                     padding: 10px 27px;
                     font-size: 15px;
                     transition: all 0.25s ease;
                     cursor: pointer;
+                    color: #222;
+                    font-weight: 400;
+                    line-height: 1.5;
 
                     &:hover {
                         color: #999;
@@ -1183,4 +1407,10 @@ a {color: #222; text-decoration: none;}
     height: 12px!important;
     margin: -6px 0 0 -6px!important;
     background: #000!important;
+}
+
+@keyframes coupon {
+    0% {top: 47px;}
+    50% {top: 52px;}
+    100% {top: 47px;}
 }
