--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -2,7 +2,7 @@
 @import url(//fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Outfit&display=swap);
 @import url(//webfontworld.github.io/gmarket/GmarketSans.css);
 
-body {background: #fff; font: 0.80em 'Outfit','Noto Sans KR','맑은 고딕','Malgun Gothic',Verdana,Dotum,AppleGothic,sans-serif}
+body {background: #fff; font: 0.80em 'Outfit','Noto Sans KR','맑은 고딕','Malgun Gothic',Verdana,Dotum,AppleGothic,sans-serif; margin: 0; padding: 0;}
 h1, h2, h3, h4, h5, h6 {margin: 0;}
 ul, li, dl, dt {list-style: none;margin: 0;padding: 0;}
 p {margin: 0}
