--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -13,7 +13,11 @@
         }
 
         ul {
+            display: flex;
+            justify-content: center;
+
             li {
+                margin: 0 7px;
                 padding: 15px 0;
                 line-height: 1.5;
                 text-align: center;
