--- a/src/assets/css/product.scss
+++ b/src/assets/css/product.scss
@@ -21,6 +21,7 @@
                 padding: 15px 0;
                 line-height: 1.5;
                 text-align: center;
+                font-size: 15px;
 
                 span {
                     display: inline-block;
@@ -31,6 +32,135 @@
                     border: 1px solid #e6e6e6;
                     border-radius: 50px;
                     background-color: #fcfcfc;
+                }
+            }
+        }
+    }
+
+    .content {
+        .nav {
+            display: flex;
+            justify-content: flex-end;
+            padding: 20px 0;
+
+            svg {
+                width: 35px;
+                height: 35px;
+            }
+        }
+
+        .products {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            column-gap: 40px;
+            row-gap: 80px;
+
+            .product {
+                .img {
+                    position: relative;
+                    border-radius: 8px;
+                    overflow: hidden;
+                    margin-bottom:10px;
+                    cursor: pointer;
+
+                    &:hover {
+                        .likes  {
+                            opacity: 1;
+                        }
+
+                        .icons {
+                            opacity: 1;
+                            bottom: 10px;
+                        }
+                    }
+
+                    .likes {
+                        position: absolute;
+                        top: 10px;
+                        right: 10px;
+                        border: 1px solid #e8e8e8;
+                        border-radius: 25px;
+                        background: #fff;
+                        opacity: 0;
+                        font-family: "GmarketSans";
+                        transition: opacity 0.5s ease;
+                        
+                        button {
+                            position: relative;
+                            top: 2px;
+                            padding: 8px 12px;
+                            line-height: 1.5;
+                        }
+                        
+                        strong {
+                            color: #222;
+                            font-size: 13px;
+                            font-weight: 400;
+                        }
+
+                        .count {
+                            font-size: 13px;
+                            color: #999;
+                            padding-left: 3px;
+                        }
+                    }
+
+                    .icons {
+                        display: flex;
+                        position: absolute;
+                        bottom: -10px;
+                        right: 10px;
+                        opacity: 0;
+                        transition: all 0.5s ease;
+
+                        span {
+                            padding: 5px;
+                            border: 1px solid #e8e8e8;
+                            background: #fff;
+
+                            svg {
+                                width: 15px;
+                                height: 15px;
+                            }
+                        }
+                    }
+                }
+
+                .description {
+                    position: relative;
+                    padding-right: 65px;
+
+                    .name {
+                        line-height: 1.3;
+                        color: #222;
+                        font-size: 20px;
+                        font-weight: 400;
+                        margin-bottom: 5px;
+                    }
+
+                    .reviewCount {
+                        position: absolute;
+                        top: 0;
+                        right: 0;
+                        border: 1px solid #e7e7e7;
+                        padding: 6px 9px;
+                        border-radius: 6px;
+                        font-size: 13px;
+                        font-weight: 400;   
+                    }
+
+                    .price {
+                        font-size: 21px;
+                        color: #222;
+                        font-weight: 700;
+                        margin-top: 5px;
+                    }
+
+                    .discountPrice {
+                        font-size: 21px;
+                        color: #222;
+                        font-weight: 400;
+                    }
                 }
             }
         }
