--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -236,18 +236,28 @@ fieldset, input {
 
 #header {
   display: flex;
+  height: 120px;
   align-items: center;
-  position: fixed;
-  top: 0;
-  left: 0;
   z-index: 1;
   width: 100%;
-  height: 120px;
   padding: 0 240px;
   box-sizing: border-box;
   font-family: "GmarketSans";
   color: #222;
+  transition: background 0.65s ease, height 0.65s ease;
+}
+#header.fixedTypeA {
+  position: fixed;
+  top: 0;
+  left: 0;
   transition: color 0.25s ease;
+}
+#header.fixedTypeB {
+  position: fixed;
+  height: 50px;
+  top: 0;
+  left: 0;
+  background: #fff;
 }
 #header.active {
   color: #fff;
